--- a/src/components/Atoms/Slide/Slide.scss
+++ b/src/components/Atoms/Slide/Slide.scss
@@ -1,8 +1,8 @@
-.Slide{
+.slideImg{
   width:100%;
   position: relative;
 
-  .SliderTxt{
+  .sliderTxt{
     position:absolute;
     top:50%;
     left:50%;
@@ -11,11 +11,11 @@
     width:26rem;
     font-size: 2.4rem;
     text-align: center;
-    .SliderTitle{
+    .sliderTitle{
       color:#ffffff;
       margin-bottom:1.5rem;
     }
-    .SliderDate{
+    .sliderDate{
       color:#ffffff;
     }
   }
