--- a/src/components/Organisms/HomeDiscussion/HomeDiscussion.scss
+++ b/src/components/Organisms/HomeDiscussion/HomeDiscussion.scss
@@ -5,14 +5,32 @@
 
 .newsContent{
   position:relative;
+  .blur.transform{
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+  }
   .blur{
     position:absolute;
     top:0;
     left:0;
     opacity: 0;
+    text-align: center;
+    position:absolute;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.7);
+    span{
+      display: none;
+      color:#ffffff;
+      font:2.4rem/40rem 'sans-serif';
+    }
   }
   .blur.on{
     span{
+      display: inline;
       color:#ffffff;
       font:2.4rem/40rem 'sans-serif';
     }
@@ -21,7 +39,6 @@
     top:0;
     left:0;
     opacity:1;
-    transition: all 0.4s ease-in;
     position:absolute;
     width:100%;
     height:100%;
