--- a/src/components/Organisms/HomeNews/HomeNews.scss
+++ b/src/components/Organisms/HomeNews/HomeNews.scss
@@ -15,24 +15,40 @@
     font:1.4rem/1.6rem 'sans-serif';
     div{margin-top:1rem; margin-bottom:1rem;}
   }
-
+  .blur.transform{
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+  }
   .blur{
     position:absolute;
     top:0;
     left:0;
     opacity: 0;
+    text-align: center;
+    position:absolute;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.7);
+    span{
+      display: none;
+      color:#ffffff;
+      font:2.4rem/55rem 'sans-serif';
+    }
   }
   .blur.on{
     span{
+      display: inline;
       color:#ffffff;
-      font:2.4rem/60rem 'sans-serif';
+      font:2.4rem/55rem 'sans-serif';
     }
     position:absolute;
     text-align: center;
     top:0;
     left:0;
     opacity:1;
-    transition: all 0.4s ease-in;
     position:absolute;
     width:100%;
     height:100%;
