--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,3 +1,2 @@
-/*@import url('https://fonts.googleapis.com/css?family=Noto+Serif:700i');
-@import url('static/fonts/NanumSquare/font.css')
-*/
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif:700i');
+@import url('/font/font.css')
