--- a/src/components/Atoms/HeadUtil/HeadUtil.scss
+++ b/src/components/Atoms/HeadUtil/HeadUtil.scss
@@ -1,4 +1,4 @@
-.headTitle{position:relative; width:90%; display: flex; margin:auto; margin-top: 3.7rem; border-bottom:0.2rem solid #000000; justify-content: space-between; margin-bottom:2.4rem;}
+.headTitle{position:relative; width:113rem; display: flex; margin:auto; margin-top: 3.7rem; border-bottom:0.2rem solid #000000; justify-content: space-between; margin-bottom:2.4rem;}
 .util{
   font:1.4rem/1.4rem 'sans-serif';
   vertical-align: bottom;
