--- a/src/components/Molecules/Navigate/Navigate.scss
+++ b/src/components/Molecules/Navigate/Navigate.scss
@@ -1,6 +1,7 @@
 .navIcon{cursor: pointer; position:fixed; z-index: 1000; left:0; top:0; width:8rem; height:8rem; border-radius: 0 4rem 4rem 4rem; background:#ffffff; border:0.2rem solid #3b3a3a;}
 .navList{
-  display: none;
+  //display: none;
+  visibility: hidden;
   opacity: 0;
   z-index:999;
   position: fixed; z-index: 900; left:0; top:0; width:37.2rem; height:100%; min-height:100%; background: #3b3a3a;
@@ -23,9 +24,12 @@
   }
     transition: all .2s ease;
 }
-.navList.on{display: block; transition: all .2s ease; opacity: 1;}
+.navList.on{
+  display: block; transition: all .2s ease; opacity: 1;
+  visibility: visible;
+}
 .lang{
-  width:20.6rem; margin-left:5.2rem; margin-top:32.8rem;
+  width:20.6rem; margin-left:5.2rem; margin-top:20.8rem;
   border-bottom:0.1rem solid #ffffff;
   span{display: block; color:#ffffff; font:1.8rem/2.4rem 'sans-serif';}
   select{
