--- a/src/components/Pages/NewsDetailPage/NewsDetailPage.scss
+++ b/src/components/Pages/NewsDetailPage/NewsDetailPage.scss
@@ -1,4 +1,5 @@
-.wrapper{width:95%; margin:auto; margin-bottom:6.2rem;}
+.wrapper{position:relative; width:95%; margin:auto; margin-bottom:6.2rem;
+}
 .newsWrapper{
   display: flex; position: relative; width:95%; margin:auto; margin-top:2.7rem;
   margin-bottom:9.2rem;
