--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -31,7 +31,7 @@
       height:3.9rem;
       color:#F67F7E;
       background:rgba(255,255,255,0.1);
-      font:1.8rem/3.9rem 'sans-serif','serif';
+      font:1.8rem/3.9rem "IBMPlexSans","sans-serif";
       -webkit-transition: all 2s ease;
       -moz-transition: all 2s ease;
       -o-transition: all 2s ease;
@@ -53,7 +53,7 @@
       left:50%;
       margin-left:-30rem;
       top:50%;
-      font:2.8rem/3.4rem 'sans-serif','serif';
+      font:2.8rem/3.4rem "IBMPlexSans","sans-serif";
       z-index: 50;
       }
     .centerLine{
