--- a/src/components/Atoms/DiscussionDetail/DiscussionDetail.scss
+++ b/src/components/Atoms/DiscussionDetail/DiscussionDetail.scss
@@ -16,7 +16,7 @@
     left:13rem;
     width:8rem;
     height:4rem;
-    font:bold 1.4rem/4rem "sans-serif";
+    font:bold 1.4rem/4rem "IBMPlexSans","sans-serif";
     color:#710C0C;
     background: #ffffff;
   }
@@ -38,7 +38,7 @@
     width:100%;
     background:#710C0C;
     height:4rem;
-    font:normal 2.8rem/4rem "sans-serif";
+    font:normal 2.8rem/4rem "IBMPlexSans","sans-serif";
     color:#ffffff;
     text-align:center;
   }
@@ -47,7 +47,7 @@
   }
   .subTitle{
     color:#000000;
-    font:bold 2.4rem/3.1rem "sans-serif";
+    font:bold 2.4rem/3.1rem "IBMPlexSans","sans-serif";
     margin-top:0.5rem;
     margin-bottom: 1.8rem;
     text-align: justify;
@@ -58,7 +58,7 @@
   .text{
     margin-top:1.6rem;
     color:#000000;
-    font:1.4rem/1.6rem "sans-serif";
+    font:1.4rem/1.6rem "IBMPlexSans","sans-serif";
     text-align: justify;
   }
   .text01{
