--- a/src/components/Atoms/DiscussionList/DiscussionList.scss
+++ b/src/components/Atoms/DiscussionList/DiscussionList.scss
@@ -7,7 +7,7 @@
     width:100%;
     background:#ffffff;
     height:5rem;
-    font:1.8rem/5rem "sans-serif";
+    font:1.8rem/5rem "IBMPlexSans","sans-serif";
     color:#000000;
     text-align:center;
   }
@@ -23,7 +23,7 @@
     height:4rem;
     margin-left:-8.7rem;
     color:#ffffff;
-    font:1.8rem/4rem "sans-serif";
+    font:1.8rem/4rem "IBMPlexSans","sans-serif";
     width:17.4rem;
     bottom:17.1rem;
     left:50%;
