--- a/src/components/Atoms/HomeDiscussionTitle/HomeDiscussionTitle.scss
+++ b/src/components/Atoms/HomeDiscussionTitle/HomeDiscussionTitle.scss
@@ -1,7 +1,7 @@
 .HomeDiscussionTitle{position:relative;}
 .title{
   margin-left:5.3rem;
-  text-align: center; margin-top:2.4rem; margin-bottom:2rem; font:bold 2rem/2.4rem 'sans-serif';
+  text-align: center; margin-top:2.4rem; margin-bottom:2rem; font:bold 2rem/2.4rem "IBMPlexSans","sans-serif";
   &::before{
     content: '';
     position: absolute;
