--- a/src/components/Atoms/HomeStartUpPost/HomeStartUpPost.scss
+++ b/src/components/Atoms/HomeStartUpPost/HomeStartUpPost.scss
@@ -5,13 +5,13 @@
   }
   .subTitle{
     color: #791D1B;
-    font:bold 1.8rem/2.2rem 'sans-serif';
+    font:bold 1.8rem/2.2rem "IBMPlexSans","sans-serif";
     margin-top:2.6rem;
     margin-bottom:2.2rem;
     text-align: justify;
   }
   .text{
-    font:1.4rem/1.6rem 'sans-serif';
+    font:1.4rem/1.6rem "IBMPlexSans","sans-serif";
     text-align: justify;
     height:30rem;
     overflow: hidden;
