--- a/src/components/Atoms/HomeSubTitle/HomeSubTitle.scss
+++ b/src/components/Atoms/HomeSubTitle/HomeSubTitle.scss
@@ -1,7 +1,7 @@
 .subTitle{
   list-style: none;
   position:relative;
-  font:1.8rem/2.1rem 'sans-serif';
+  font:1.8rem/2.1rem "IBMPlexSans","sans-serif";
   padding-left:2.7rem;
   &::before{
     content: '';
