--- a/src/components/Atoms/NewsContentList/NewsContentList.scss
+++ b/src/components/Atoms/NewsContentList/NewsContentList.scss
@@ -7,11 +7,11 @@
   dt{
     .listTitle{
       margin-right:1.7rem;
-      font:bold 1.4rem/1.8rem 'sans-serif';
+      font:bold 1.4rem/1.8rem "IBMPlexSans","sans-serif";
       color:#122491;
     }
-    font:1rem/1.3rem 'sans-serif';
+    font:1rem/1.3rem "IBMPlexSans","sans-serif";
   }
-  dd{margin-top:0.9rem; font:1.4rem/1.8rem 'sans-serif';}
+  dd{margin-top:0.9rem; font:1.4rem/1.8rem "IBMPlexSans","sans-serif";}
 
 }
