--- a/src/components/Atoms/Slide/Slide.scss
+++ b/src/components/Atoms/Slide/Slide.scss
@@ -6,10 +6,10 @@
     position:absolute;
     top:50%;
     left:50%;
-    margin-left:-13rem;
+    margin-left:-15rem;
     margin-top:-3rem;
-    width:26rem;
-    font-size: 2.4rem;
+    width:30rem;
+    font:2.4rem/2.4rem "IBMPlexSans","sans-serif";
     text-align: center;
     .sliderTitle{
       color:#ffffff;
