--- a/src/components/Atoms/StartUpPost/StartUpPost.scss
+++ b/src/components/Atoms/StartUpPost/StartUpPost.scss
@@ -2,7 +2,7 @@
   position:relative;
   display: inline-block;
   margin:3rem;
-  margin-bottom:0;
+  margin-top: 0;
   .img{
     width:28.7rem;
     height:36.7rem;
@@ -25,6 +25,6 @@
     margin-left:-9.1rem;
     width:18.2rem;
     height:4rem;
-    font:1.8rem/4rem 'sans-serif';
+    font:1.8rem/4rem "IBMPlexSans","sans-serif";
   }
 }
