--- a/src/components/Organisms/HomeStartUp/HomeStartUp.scss
+++ b/src/components/Organisms/HomeStartUp/HomeStartUp.scss
@@ -26,14 +26,14 @@
     span{
       display: none;
       color:#ffffff;
-      font:2.4rem/60rem 'sans-serif';
+      font:2.4rem/60rem "IBMPlexSans","sans-serif";
     }
   }
   .blur.on{
     span{
       display: inline;
       color:#ffffff;
-      font:2.4rem/60rem 'sans-serif';
+      font:2.4rem/60rem "IBMPlexSans","sans-serif";
     }
     position:absolute;
     text-align: center;
