--- a/src/components/Atoms/DiscussionSub/DiscussionSub.scss
+++ b/src/components/Atoms/DiscussionSub/DiscussionSub.scss
@@ -21,19 +21,19 @@
     height:4rem;
     text-align: center;
     color:#ffffff;
-    font:1.4rem/4rem "sans-serif";
+    font:1.4rem/4rem "IBMPlexSans","sans-serif";
   }
   img{width:55.4rem; height:38.4rem; margin:auto;}
   .subTitle{
     color:#000000;
-    font:bold 2.4rem/3.1rem "sans-serif";
+    font:bold 2.4rem/3.1rem "IBMPlexSans","sans-serif";
     margin-top:0.5rem;
     margin-bottom: 1.8rem;
     text-align: justify;
   }
   .text{
     color:#000000;
-    font:1.2rem/1.6rem "sans-serif";
+    font:1.2rem/1.6rem "IBMPlexSans","sans-serif";
     text-align: justify;
   }
 }
