--- a/src/components/Atoms/Footer/Footer.scss
+++ b/src/components/Atoms/Footer/Footer.scss
@@ -2,11 +2,12 @@
   width:100%;
   height:26.4rem;
   background: url('/assets/bg-main-1.png');
+  background-size: cover;
   .footerTxt{
     padding-top:4rem;
     text-align: center;
     color:#ffffff;
-    font:2.4rem/2.9rem 'sans-serif';
+    font:2.4rem/2.9rem "IBMPlexSans","sans-serif";
   }
   .inputBox{
     border:0.2rem solid #ffffff;
@@ -16,7 +17,7 @@
     margin-bottom:4.3rem;
     input{
       width:38rem; height:1.9rem;
-      font:1.8rem/3.9rem 'sans-serif';
+      font:1.8rem/3.9rem "IBMPlexSans","sans-serif";
       color:#ffffff;
       background: none;
       border:0 none;
@@ -40,6 +41,6 @@
     text-align:center;
     color:#ffffff;
     cursor: pointer;
-    font:lighter 1.4rem/3.9rem 'sans-serif';
+    font:lighter 1.4rem/3.9rem "IBMPlexSans","sans-serif";
   }
 }
