--- a/src/components/Atoms/HeadThumb/HeadThumb.scss
+++ b/src/components/Atoms/HeadThumb/HeadThumb.scss
@@ -24,7 +24,7 @@
     margin-left:-2.3rem;
     text-align: center;
     color:#ffffff;
-    font:1.8rem/2.1rem 'sans-serif';
+    font:1.8rem/2.1rem "IBMPlexSans","sans-serif";
     display: none;
     }
   }
@@ -53,7 +53,7 @@
       margin-left:-2.3rem;
       text-align: center;
       color:#ffffff;
-      font:1.8rem/2.1rem 'sans-serif';
+      font:1.8rem/2.1rem "IBMPlexSans","sans-serif";
     }
   }
 }
