--- a/src/components/Atoms/NewsTitle/NewsTitle.scss
+++ b/src/components/Atoms/NewsTitle/NewsTitle.scss
@@ -1,1 +1,1 @@
-.title{margin-top:1.3rem; margin-bottom:2.7rem; font:bold 2.4rem/3.1rem 'sans-serif';}
+.title{margin-top:1.3rem; margin-bottom:2.7rem; font:bold 2.4rem/3.1rem "IBMPlexSans","sans-serif";}
