--- a/src/components/Molecules/NewsContent/NewsContent.scss
+++ b/src/components/Molecules/NewsContent/NewsContent.scss
@@ -18,6 +18,6 @@
 }
 .detailTxt{
   margin-top:2.8rem;
-  font:1.4rem/2rem 'sans-serif';
+  font:1.4rem/2rem "IBMPlexSans","sans-serif";
   text-align: justify;
 }
