--- a/src/components/Organisms/HomeDiscussion/HomeDiscussion.scss
+++ b/src/components/Organisms/HomeDiscussion/HomeDiscussion.scss
@@ -25,14 +25,14 @@
     span{
       display: none;
       color:#ffffff;
-      font:2.4rem/40rem 'sans-serif';
+      font:2.4rem/40rem "IBMPlexSans","sans-serif";
     }
   }
   .blur.on{
     span{
       display: inline;
       color:#ffffff;
-      font:2.4rem/40rem 'sans-serif';
+      font:2.4rem/40rem "IBMPlexSans","sans-serif";
     }
     position:absolute;
     text-align: center;
@@ -69,5 +69,5 @@
   }
 
 }
-.category{font:1.8rem/2.4rem 'sans-serif'; border-bottom:0.1rem solid #000000; border-top:0.1rem solid #000000; text-align: left; margin-bottom:2rem;}
-.text{font:1.4rem/1.6rem 'sans-serif';}
+.category{font:1.8rem/2.4rem "IBMPlexSans","sans-serif"; border-bottom:0.1rem solid #000000; border-top:0.1rem solid #000000; text-align: left; margin-bottom:2rem;}
+.text{font:1.4rem/1.6rem "IBMPlexSans","sans-serif";}
