--- a/src/components/Organisms/HomeNews/HomeNews.scss
+++ b/src/components/Organisms/HomeNews/HomeNews.scss
@@ -12,7 +12,7 @@
   column-gap: 2rem;
   text-align:justify;
   .text{
-    font:1.4rem/1.6rem 'sans-serif';
+    font:1.4rem/1.6rem "IBMPlexSans","sans-serif";
     div{margin-top:1rem; margin-bottom:1rem;}
   }
   .blur.transform{
@@ -35,14 +35,14 @@
     span{
       display: none;
       color:#ffffff;
-      font:2.4rem/55rem 'sans-serif';
+      font:2.4rem/55rem "IBMPlexSans","sans-serif";
     }
   }
   .blur.on{
     span{
       display: inline;
       color:#ffffff;
-      font:2.4rem/55rem 'sans-serif';
+      font:2.4rem/55rem "IBMPlexSans","sans-serif";
     }
     position:absolute;
     text-align: center;
@@ -56,4 +56,4 @@
   }
 
 }
-.category{font:1.8rem/2.4rem 'sans-serif'; border-bottom:0.1rem solid #000000; border-top:0.1rem solid #000000; text-align: left; margin-bottom:2rem;}
+.category{font:1.8rem/2.4rem "IBMPlexSans","sans-serif"; border-bottom:0.1rem solid #000000; border-top:0.1rem solid #000000; text-align: left; margin-bottom:2rem;}
