--- a/src/components/Pages/NewsDetailPage/NewsDetailPage.scss
+++ b/src/components/Pages/NewsDetailPage/NewsDetailPage.scss
@@ -37,7 +37,7 @@
   margin-left: 3.7rem; height:84rem;
   .postTitle{
     margin-top:4.1rem;
-    font:1.8rem/2.1rem 'sans-serif';
+    font:1.8rem/2.1rem "IBMPlexSans","sans-serif";
     text-align: left;
   }
 }
