--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -54,17 +54,18 @@
       margin-left:-30rem;
       top:50%;
       font:2.8rem/3.4rem "IBMPlexSans","sans-serif";
-      z-index: 50;
+      z-index: 30;
       }
     .centerLine{
-      background: url('/assets/bg-color_bar.png');
+      background: url('/assets/img-main-bar.png') no-repeat;
+      background-size:cover;
       width:2rem;
       height:100%;
       position:absolute;
       left:50%;
       bottom:0;
       transform:translate(-1rem,0);
-      z-index:30;
+      z-index:50;
     }
     .centerLogo{
       z-index:40;
@@ -74,6 +75,27 @@
       height:8rem;
       transform:translate(-4rem,0);
       bottom:1%;
+    }
+  }
+}
+.footer{
+  width:100%;
+  background: #dfe2d9;
+  .footerInner{
+    width:15.7rem;
+    margin:auto;
+    background: #e9e9e7;
+    .footerText{
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+      div{
+        a{
+          color:#6e6e6e;
+        }
+        text-align: center;
+        padding:1rem 0;
+        font:1.4rem/1.8rem "IBMPlexSans","sans-serif";
+      }
     }
   }
 }
