--- a/src/container/SliderContainer/SliderContainer.css
+++ b/src/container/SliderContainer/SliderContainer.css
@@ -19,7 +19,7 @@
   list-style: none;
   padding: 0;
   /* Fix of Webkit flickering */
-  z-index: 1;
+  z-index: 60 !important;
 }
 .swiper-container-no-flexbox .swiper-slide {
   float: left;
