--- a/src/components/Organisms/HomeData/HomeData.scss
+++ b/src/components/Organisms/HomeData/HomeData.scss
@@ -17,6 +17,7 @@
     margin-left:0.5rem;
     border:0 none;
     background:none;
+    font:1.4rem/1.8rem "IBMPlexSans","sans-serif";
   }
 }
   .homeDataWrapper{
