--- a/src/components/Atoms/Footer/Footer.scss
+++ b/src/components/Atoms/Footer/Footer.scss
@@ -1,46 +1,21 @@
 .footer{
   width:100%;
-  height:26.4rem;
-  background: url('/assets/bg-main-1.png');
-  background-size: cover;
-  .footerTxt{
-    padding-top:4rem;
-    text-align: center;
-    color:#ffffff;
-    font:2.4rem/2.9rem "IBMPlexSans","sans-serif";
-  }
-  .inputBox{
-    border:0.2rem solid #ffffff;
-    width:40rem; height:3.9rem;
+  background: #dfe2d9;
+  .footerInner{
+    width:15.7rem;
     margin:auto;
-    margin-top:4.3rem;
-    margin-bottom:4.3rem;
-    input{
-      width:38rem; height:1.9rem;
-      font:1.8rem/3.9rem "IBMPlexSans","sans-serif";
-      color:#ffffff;
-      background: none;
-      border:0 none;
-      margin:1rem;
+    background: #e9e9e7;
+    .footerText{
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+      div{
+        a{
+          color:#6e6e6e;
+        }
+        text-align: center;
+        padding:1rem 0;
+        font:1.4rem/1.8rem "IBMPlexSans","sans-serif";
+      }
     }
-    ::-webkit-input-placeholder{color:#ffffff;}
-    -moz-placeholder{color:#ffffff;}
-    input-placeholder{
-      color:#ffffff;
-    }
-  }
-  .footerBtn{
-    display: block;
-    border-radius: 14.5rem;
-    background:#0044DC;
-    width:14rem;
-    height:3.9rem;
-    margin:auto;
-    margin-bottom:2.9rem;
-    border:0 none;
-    text-align:center;
-    color:#ffffff;
-    cursor: pointer;
-    font:lighter 1.4rem/3.9rem "IBMPlexSans","sans-serif";
   }
 }
