--- a/src/components/Pages/DataPage/DataPage.scss
+++ b/src/components/Pages/DataPage/DataPage.scss
@@ -1,3 +1,11 @@
+.dataList{
+  width:113rem;
+  margin:auto;
+}
+.listContainer.on{
+  opacity: 0.6;
+}
+
 .searchInput{
   width:40rem;
   height:4rem;
@@ -11,6 +19,7 @@
     margin-left:0.5rem;
     border:0 none;
     background:none;
+    font:1.4rem/1.8rem "IBMPlexSans","sans-serif";
   }
 }
 .searchBtn{
