--- a/src/components/Pages/NewsDetailPage/NewsDetailPage.scss
+++ b/src/components/Pages/NewsDetailPage/NewsDetailPage.scss
@@ -1,7 +1,7 @@
-.wrapper{position:relative; width:95%; margin:auto; margin-bottom:6.2rem;
+.newsDetailwrapper{position:relative; margin-bottom:6.2rem;
 }
-.newsWrapper{
-  display: flex; position: relative; width:95%; margin:auto; margin-top:2.7rem;
+.newsDetailContainer{
+  display: flex; position: relative; width:130rem; margin:auto; margin-top:2.7rem;
   margin-bottom:9.2rem;
   a{color:#000000;}
 }
