--- a/src/components/Pages/NewsListPage/NewsListPage.scss
+++ b/src/components/Pages/NewsListPage/NewsListPage.scss
@@ -1,3 +1,7 @@
+.newsList{
+  width:113rem;
+  margin:auto;
+}
 .searchInput{
   width:40rem;
   height:4rem;
@@ -11,6 +15,7 @@
     margin-left:0.5rem;
     border:0 none;
     background:none;
+    font:1.4rem/1.8rem "IBMPlexSans","sans-serif";
   }
 }
 .searchBtn{
