--- a/src/components/Pages/NewsPage/NewsPage.scss
+++ b/src/components/Pages/NewsPage/NewsPage.scss
@@ -1,6 +1,6 @@
-.wrapper{width:95%; margin:auto; margin-bottom:6.2rem;}
+.wrapper{margin-bottom:6.2rem;}
 .newsWrapper{
-  display: flex; position: relative; width:95%; margin:auto; margin-top:2.7rem;
+  display: flex; position: relative; width:130rem; margin:auto; margin-top:2.7rem;
   a{color:#000000;}
 }
 .col{flex:1;}
