--- a/src/components/Molecules/NewsContent/NewsContent.scss
+++ b/src/components/Molecules/NewsContent/NewsContent.scss
@@ -1,3 +1,13 @@
+.hideImgContainer{
+  max-height:50rem;
+  margin-top:1rem;
+  overflow: scroll;
+  overflow-x: hidden;
+    &::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+  }
+}
 .detailContainer{
   max-height:84rem;
   margin-top:1rem;
@@ -9,13 +19,6 @@
   }
 }
 
-.whiteGradient{
-  width:100%;
-  height:10rem;
-  position:absolute;
-  bottom:0;
-  background-image: linear-gradient(0deg, rgba(255,255,255,0.8),rgba(255,255,255,0));
-}
 .detailTxt{
   margin-top:2.8rem;
   font:1.4rem/2rem "IBMPlexSans","sans-serif";
