--- a/src/components/Pages/NewsPage/NewsPage.scss
+++ b/src/components/Pages/NewsPage/NewsPage.scss
@@ -8,3 +8,21 @@
 
 .detail{margin-right: 3.7rem;}
 .list{margin-left: 3.7rem;}
+
+.listContainer{
+  height:84rem;
+  overflow: scroll;
+  overflow-x: hidden;
+  &::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+  }
+}
+.detail.col{position:relative;}
+.whiteGradient{
+  width:100%;
+  height:10rem;
+  position:absolute;
+  bottom:0;
+  background-image: linear-gradient(0deg, rgba(255,255,255,0.8),rgba(255,255,255,0));
+}
