--- a/src/components/Atoms/NewsContentList/NewsContentList.scss
+++ b/src/components/Atoms/NewsContentList/NewsContentList.scss
@@ -1,6 +1,6 @@
-.list{cursor:pointer; display: flex; margin-top:2.5rem; margin-bottom:2.5rem;}
+.list{cursor:pointer; display: flex; margin-top:2.5rem; margin-bottom:2.5rem; height:12rem;}
 
-.listImg{width:18rem; }
+.listImg{width:18rem; height:12rem;}
 .listText{
   margin-top:2.9rem;
   margin-left:3.5rem;
