--- a/src/components/Atoms/NewsDetailPost/NewsDetailPost.scss
+++ b/src/components/Atoms/NewsDetailPost/NewsDetailPost.scss
@@ -1,14 +1,22 @@
 .post{
   margin:1rem;
   .cate{
+    width:18rem;
     text-align: center;
     color:#ffffff;
     background:#000385;
     font:1rem/1.3rem "IBMPlexSans","sans-serif";
   }
   .img{
+    width:18rem;
+    height:12rem;
+    img{
+      width:100%;
+      height:100%;
+    }
   }
   .subTitle{
+    width:18rem;
     color: #000000;
     font:bold 1.8rem/2.2rem "IBMPlexSans","sans-serif";
     margin-top:1.2rem;
