--- a/src/components/Pages/NewsListPage/NewsListPage.scss
+++ b/src/components/Pages/NewsListPage/NewsListPage.scss
@@ -1,45 +1,28 @@
-.newsList{
-  width:113rem;
-  margin:auto;
+.wrapper{margin-bottom:6.2rem;}
+.newsWrapper{
+  display: flex; position: relative; width:130rem; margin:auto; margin-top:2.7rem;
+  a{color:#000000;}
 }
-.searchInput{
-  width:40rem;
-  height:4rem;
-  border:0.1rem solid #000000;
-  background: #ffffff;
-  box-sizing: border-box;
-  input{
-    width:38rem;
-    height:2.5rem;
-    margin-top:0.5rem;
-    margin-left:0.5rem;
-    border:0 none;
-    background:none;
-    font:1.4rem/1.8rem "IBMPlexSans","sans-serif";
+.col{flex:1;}
+.line{position:absolute; left:50%; top: 3rem; width:0.3rem; height:83.6rem; background: #cfcfcf;}
+
+.detail{margin-right: 3.7rem;}
+.list{margin-left: 3.7rem;}
+
+.listContainer{
+  height:84rem;
+  overflow: scroll;
+  overflow-x: hidden;
+  &::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
   }
 }
-.searchBtn{
-  width:4rem;
-  height:4rem;
-  padding:0;
-  border:0;
-  background:none;
-    img{
-      display: block;
-      width:100%; height:100%;
-    }
-  }
-  .search{
-    display: flex;
-    margin:auto;
-    width:44rem;
-    margin-top:1.1rem;
-    margin-bottom:2.3rem;
-  }
-  .listContainer{
-    padding-bottom:10rem;
-    width:105rem;
-    margin:auto;
-    .thumbList{
-    }
-  }
+.detail.col{position:relative;}
+.whiteGradient{
+  width:100%;
+  height:10rem;
+  position:absolute;
+  bottom:0;
+  background-image: linear-gradient(0deg, rgba(255,255,255,0.8),rgba(255,255,255,0));
+}
