--- a/src/components/Atoms/HeadUtil/HeadUtil.scss
+++ b/src/components/Atoms/HeadUtil/HeadUtil.scss
@@ -8,6 +8,6 @@
   }
 }
 
-.title{cursor:pointer; font:2.4rem/2.4rem "IBMPlexSans","sans-serif"; vertical-align: bottom; line-height: 3.1rem; margin-left: -9rem;}
+.title{position: absolute; left:50%; cursor:pointer; font:2.4rem/2.4rem "IBMPlexSans","sans-serif"; vertical-align: bottom; line-height: 3.1rem; margin-left: -9rem;}
 .day{font:1.4rem/1.4rem "IBMPlexSans","sans-serif"; vertical-align: bottom; line-height: 3.1rem;}
 .news{position:absolute; font:1.8rem/2.4rem "IBMPlexSans","sans-serif"; vertical-align: bottom; line-height: 3.1rem; bottom: -3.5rem; }
